# Flourine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  main.cpp
flourine/: main.fl  syntax.fl
lexer/: CMakeLists.txt  lexer_main.cpp  lexer_main.h  lexer_main.hpp
linguist/: Flourine.yml  flourine.yml
parsing/: CMakeLists.txt  parsing_main.cpp
parsing/ast/: base_ast.cpp  base_ast.h
parsing/lexer/: lexer_main.h
src/: lexer.h  lexer.hpp  main.c  main.cpp  tokenizer.hpp
util/: CMakeLists.txt  util_main.cpp  util_main.h
